--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
         "src/site/images/typings.d.ts",
         "src/site/images",
 
+        // Node-Teil
+        "src/node/**/*.ts",
+
         // Hier werden die auch die Tests eingebunden
         // Nur damit funktioniert das überschreiben in der "prototype"-chain
         // Nur damit funktioniert JEST richtig - bzw. die Kombi WS + JEST
