--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:node:prod": "NODE_ENV=production webpack --config webpack.node.js --mode production",
     "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
     "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
-    "deploy": "yarn run test && yarn run build && yarn version --new-version patch && yarn publish --non-interactive",
+    "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
     "test": "yarn run test:unit && yarn run test:e2e",
     "test:unit": "jest --colors src/test/unit",
     "test:integration": "jest --colors --runInBand --detectOpenHandles src/test/integration",
