--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
     "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
     "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
+    "lint": "tslint --project tsconfig.json",
     "test": "yarn run test:unit && yarn run test:e2e",
     "test:unit": "jest --colors src/test/unit",
     "test:integration": "jest --colors --runInBand --detectOpenHandles src/test/integration",
