--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,11 @@
 
     "extends": "./tsconfig.lib",
     "include": [
+        // Hier werden die auch die Tests eingebunden
+        // Nur damit funktioniert das überschreiben in der "prototype"-chain
+        // Nur damit funktioniert JEST richtig - bzw. die Kombi WS + JEST
+        "src/test/**/*.ts",
+
         // Dieses includes müssen hier bleiben sonst kommt bei 'yarn build' die Fehlermeldung
         //      TS6059: File '.../src/browser/app.ts' is not under 'rootDir' '.../persistence/src/main'.
         //      'rootDir' is expected to contain all source files.
@@ -30,11 +35,8 @@
         // Node-Teil
         "src/node/**/*.ts",
 
-        // Hier werden die auch die Tests eingebunden
-        // Nur damit funktioniert das überschreiben in der "prototype"-chain
-        // Nur damit funktioniert JEST richtig - bzw. die Kombi WS + JEST
-        "src/test/**/*.ts",
-        "node_modules/tslint-override/register.d.ts",
+        // TS-Lint
+        // "node_modules/tslint-override/register.d.ts",
 
         // QUnit scheint sonst nicht zu funktionieren
         "node_modules/@types/qunit/index.d.ts"
