--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.3.1",
     "webpack-livereload-plugin": "^2.2.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "winston-transport-browserconsole": "^1.0.1"
   }
 }
