--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "main": "./lib/index.js",
     "typings": "./lib/index.d.ts",
     "scripts": {
+        "pkg:version": "echo $(jq -r -j '.name' < package.json;echo -n ': ';jq -r -j '.version' < package.json)",
+        "update": "yarn update:browser",
+        "update:browser": "browserslist --update-db",
         "clean": "rm -rf lib dist bin &&  rm -rf node_modules/@types/istanbul-reports && jest --clearCache && rm -rf .ts.cache && rm -rf .rollup.cache && rm -f .tsbuildinfo",
         "gen:barrels": "barrelsby --singleQuotes --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s flat",
         "serve": "NODE_ENV=development webpack serve --config webpack.web.js --mode development",
@@ -46,79 +49,78 @@
         "url": "https://github.com/MikeMitterer/typescript-training"
     },
     "dependencies": {
-        "@mmit/logging": "^0.1.6",
-        "date-fns": "^2.22.1",
+        "@mmit/logging": "0.1.9",
+        "date-fns": "^2.30.0",
         "path": "^0.12.7"
     },
     "devDependencies": {
-        "@babel/cli": "^7.14.5",
-        "@babel/core": "^7.14.6",
-        "@babel/node": "^7.14.7",
+        "@babel/cli": "^7.22.10",
+        "@babel/core": "^7.22.11",
+        "@babel/node": "^7.22.10",
         "@babel/plugin-proposal-class-properties": "^7.14.5",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
-        "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
-        "@babel/plugin-proposal-optional-chaining": "^7.14.5",
-        "@babel/plugin-transform-runtime": "^7.14.5",
-        "@babel/preset-env": "^7.14.7",
-        "@babel/preset-typescript": "^7.14.5",
-        "@babel/runtime": "^7.14.6",
+        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+        "@babel/plugin-transform-runtime": "^7.22.10",
+        "@babel/preset-env": "^7.22.10",
+        "@babel/preset-typescript": "^7.22.11",
+        "@babel/runtime": "^7.22.11",
         "@mmit/muni": "^0.0.2",
         "@mmit/styles": "^0.1.33",
-        "@types/chai": "^4.2.22",
+        "@types/chai": "^4.3.5",
         "@types/core-js": "^2.5.4",
-        "@types/expect-puppeteer": "4.4.5",
-        "@types/jest": "^26.0.23",
-        "@types/node": "^15.12.5",
-        "@types/puppeteer": "^5.4.3",
-        "@types/shelljs": "^0.8.8",
-        "@types/ws": "^7.4.5",
-        "autoprefixer": "^10.2.6",
-        "awesome-typescript-loader": "^5.2.1",
-        "babel-jest": "^27.0.6",
-        "babel-loader": "^8.2.2",
+        "@types/expect-puppeteer": "5.0.3",
+        "@types/jest": "^29.5.4",
+        "@types/node": "^20.5.7",
+        "@types/puppeteer": "^7.0.4",
+        "@types/shelljs": "^0.8.12",
+        "@types/ws": "^8.5.5",
+        "autoprefixer": "^10.4.15",
+        "babel-jest": "^29.6.4",
+        "babel-loader": "^9.1.3",
         "babel-plugin-transform-inline-environment-variables": "^0.4.3",
         "babel-preset-modern-browsers": "^15.0.2",
-        "barrelsby": "^2.2.0",
-        "beautify-html-webpack-plugin": "^1.0.3",
-        "chai": "^4.3.4",
+        "barrelsby": "^2.8.0",
+        "chai": "^4.3.8",
         "clean-terminal-webpack-plugin": "^3.0.0",
         "clean-webpack-plugin": "^4.0.0-alpha.0",
-        "copy-webpack-plugin": "^9.0.1",
-        "css-loader": "^5.2.6",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.8.1",
         "ejs-compiled-loader": "^3.1.0",
         "file-loader": "^6.2.0",
-        "html-loader": "^2.1.2",
-        "html-webpack-plugin": "^5.3.2",
+        "html-loader": "^4.2.0",
+        "html-webpack-plugin": "^5.5.3",
         "html-webpack-string-replace-plugin": "^1.1.0",
-        "jest": "^27.0.6",
-        "jest-cli": "^27.0.6",
-        "jest-extended": "^0.11.5",
-        "jest-haste-map": "^27.0.6",
-        "jest-puppeteer": "^5.0.4",
-        "jest-resolve": "^27.0.6",
-        "mini-css-extract-plugin": "^1.6.2",
-        "postcss": "^8.3.5",
-        "postcss-loader": "^6.1.0",
-        "puppeteer": "^10.1.0",
-        "sass": "^1.35.1",
-        "sass-loader": "^12.1.0",
-        "semver": "^7.3.5",
+        "jest": "^29.6.4",
+        "jest-cli": "^29.6.4",
+        "jest-environment-jsdom": "^29.6.4",
+        "jest-extended": "^4.0.1",
+        "jest-haste-map": "^29.6.4",
+        "jest-puppeteer": "^9.0.0",
+        "jest-resolve": "^29.6.4",
+        "mini-css-extract-plugin": "^2.7.6",
+        "postcss": "^8.4.29",
+        "postcss-loader": "^7.3.3",
+        "puppeteer": "^21.1.1",
+        "sass": "^1.66.1",
+        "sass-loader": "^13.3.2",
+        "semver": "^7.5.4",
         "shelljs": "^0.8.4",
-        "source-map-loader": "^3.0.0",
-        "style-loader": "^3.0.0",
-        "ts-jest": "^27.0.3",
-        "ts-loader": "^9.2.3",
+        "source-map-loader": "^4.0.1",
+        "style-loader": "^3.3.3",
+        "ts-jest": "^29.1.1",
+        "ts-loader": "^9.4.4",
         "ts-node": "^10.0.0",
         "tslint": "^6.1.3",
         "tslint-consistent-codestyle": "^1.16.0",
         "tslint-loader": "^3.5.4",
         "tslint-override": "^1.0.1",
-        "typedoc": "^0.21.2",
-        "typescript": "^4.3.4",
+        "typedoc": "^0.25.0",
+        "typescript": "^5.2.2",
         "url-loader": "^4.1.1",
-        "webpack": "5.41.1",
-        "webpack-cli": "4.7.2",
-        "webpack-dev-server": "^3.11.2",
+        "webpack": "5.88.2",
+        "webpack-cli": "5.1.4",
+        "webpack-dev-server": "^4.15.1",
         "webpack-livereload-plugin": "^3.0.1",
         "webpack-node-externals": "^3.0.0"
     }
