--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@mmit/typescript-starter",
     "author": "Mike Mitterer",
-    "version": "0.6.33",
+    "version": "0.7.0",
     "description": "This is a starter project for typescript projects",
+    "type": "module",
     "keywords": [
         "typescript"
     ],
@@ -22,7 +23,7 @@
         "clean:jest": "jest --clearCache",
         "clean:all": "yarn clean && yarn clean:jest && rm -f yarn.lock && rm -rf node_modules && yarn clean cache",
         "gen:barrels": "barrelsby --singleQuotes --delete -d src/main --exclude ConfigLog4j --exclude 'events/utils' -l top -s flat",
-        "serve": "NODE_ENV=development webpack serve --config webpack.web.js --mode development",
+        "serve": "NODE_ENV=development webpack serve --config webpack.web.cjs --mode development",
         "start": "yarn serve --open",
         "tc": "tsc --noEmit --project tsconfig.lib.json",
         "tc:watch": "npm run tc -- --watch",
@@ -36,19 +37,17 @@
         "build:ts": "tsc --rootDir $(pwd)/src/main --project tsconfig.lib.json --declaration --outDir $(pwd)/lib",
         "build:ts:watch": "yarn build:ts --watch",
         "build:types": "rm -rf lib && yarn build:ts --emitDeclarationOnly",
-        "build:js": "rm -rf lib && NODE_ENV=development webpack --config webpack.ts.js --mode development",
-        "build:js:prod": "rm -rf lib && NODE_ENV=production webpack --config webpack.ts.js --mode production",
+        "build:js": "rm -rf lib && NODE_ENV=development webpack --config webpack.ts.cjs --mode development",
+        "build:js:prod": "rm -rf lib && NODE_ENV=production webpack --config webpack.ts.cjs --mode production",
         "build:babel": "rm -rf lib && REQUIRE_TARGET='browser' babel src/main --out-dir lib --extensions \".ts,.tsx\" --source-maps",
-        "build:node": "rm -rf bin && NODE_ENV=development webpack --config webpack.node.js --mode development",
-        "build:node:prod": "NODE_ENV=production webpack --config webpack.node.js --mode production",
-        "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.js --mode development",
-        "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.js --mode production",
+        "build:node": "rm -rf bin && NODE_ENV=development webpack --config webpack.node.cjs --mode development",
+        "build:node:prod": "NODE_ENV=production webpack --config webpack.node.cjs --mode production",
+        "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.cjs --mode development",
+        "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.cjs --mode production",
         "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
         "doc": "typedoc --out doc --tsconfig tsconfig.lib.json src/main/",
         "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}",
-        "export": "yarn export:scripts",
-        "export:scripts": "jq -r '.scripts' < package.json > ${DEV_LOCAL}/Templates/Production/TypeScript/package/scripts.json",
-        "export:jenkins": "cp -f build.jenkins ${DEV_LOCAL}/Templates/Production/TypeScript"
+        "export:scripts": "jq -r '.scripts' package.json > \"${DEV_LOCAL}/Templates/Production/TypeScript/packages/scripts.json\""
     },
     "files": [
         "lib",
@@ -59,37 +58,34 @@
         "url": "https://github.com/MikeMitterer/typescript-training"
     },
     "dependencies": {
-        "@mmit/logging": "0.1.9",
+        "@mmit/logging": "0.1.12",
         "date-fns": "^2.30.0",
         "path": "^0.12.7"
     },
     "devDependencies": {
         "@babel/cli": "^7.22.10",
         "@babel/core": "^7.22.11",
-        "@babel/node": "^7.22.10",
         "@babel/plugin-transform-runtime": "^7.22.10",
         "@babel/preset-env": "^7.22.10",
         "@babel/preset-typescript": "^7.22.11",
         "@babel/runtime": "^7.22.11",
-        "@mmit/muni": "^0.0.2",
+        "@mmit/muni": "^0.0.5",
         "@mmit/styles": "^0.1.33",
         "@types/caniuse-lite": "^1",
         "@types/chai": "^4.3.5",
         "@types/core-js": "^2.5.4",
         "@types/eslint": "^8",
-        "@types/expect-puppeteer": "5.0.3",
-        "@types/jest": "^29.5.4",
+        "@types/jest": "29.5.4",
         "@types/node": "^20.5.7",
-        "@types/shelljs": "^0.8.12",
-        "@types/ws": "^8.5.5",
-        "@typescript-eslint/eslint-plugin": "^6.5.0",
-        "@typescript-eslint/parser": "^6.5.0",
+        "@types/shelljs": "^0.8.9",
+        "@types/ws": "^7.4.7",
+        "@typescript-eslint/eslint-plugin": "^6.6.0",
+        "@typescript-eslint/parser": "^6.6.0",
         "assert": "^2.0.0",
         "autoprefixer": "^10.4.15",
-        "babel-jest": "^29.6.4",
+        "babel-jest": "29.7.0",
         "babel-loader": "^9.1.3",
         "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-        "babel-preset-modern-browsers": "^15.0.2",
         "barrelsby": "^2.8.0",
         "browserify-zlib": "^0.2.0",
         "browserlist": "^1.0.1",
@@ -98,45 +94,45 @@
         "chai": "^4.3.8",
         "clean-terminal-webpack-plugin": "^3.0.0",
         "clean-webpack-plugin": "^4.0.0-alpha.0",
-        "copy-webpack-plugin": "^11.0.0",
+        "copy-webpack-plugin": "^9.0.1",
         "crypto-browserify": "^3.12.0",
-        "css-loader": "^6.8.1",
+        "css-loader": "^6.2.0",
         "ejs-compiled-loader": "^3.1.0",
         "eslint": "^8.48.0",
         "file-loader": "^6.2.0",
-        "html-loader": "^4.2.0",
-        "html-webpack-plugin": "^5.5.3",
+        "html-loader": "^2.1.2",
+        "html-webpack-plugin": "^5.3.2",
         "html-webpack-string-replace-plugin": "^1.1.0",
         "https-browserify": "^1.0.0",
-        "jest": "^29.6.4",
-        "jest-cli": "^29.6.4",
-        "jest-environment-jsdom": "^29.6.4",
-        "jest-extended": "^4.0.1",
-        "jest-haste-map": "^29.6.4",
-        "jest-puppeteer": "^9.0.0",
-        "jest-resolve": "^29.6.4",
-        "mini-css-extract-plugin": "^2.7.6",
+        "jest": "29.7.0",
+        "jest-cli": "29.7.0",
+        "jest-environment-jsdom": "29.7.0",
+        "jest-extended": "2.0.0",
+        "jest-haste-map": "29.7.0",
+        "jest-puppeteer": "9.0.0",
+        "jest-resolve": "29.7.0",
+        "mini-css-extract-plugin": "^2.2.0",
         "path-browserify": "^1.0.1",
         "postcss": "^8.4.29",
         "postcss-loader": "^7.3.3",
-        "puppeteer": "^21.1.1",
-        "sass": "^1.66.1",
-        "sass-loader": "^13.3.2",
-        "semver": "^7.5.4",
+        "puppeteer": "21.1.1",
+        "sass": "~1.32",
+        "sass-loader": "10",
+        "semver": "^7.3.5",
         "shelljs": "^0.8.4",
-        "source-map-loader": "^4.0.1",
+        "source-map-loader": "3.0.0",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
-        "style-loader": "^3.3.3",
+        "style-loader": "^3.2.1",
         "ts-jest": "^29.1.1",
         "ts-loader": "^9.4.4",
         "ts-node": "^10.0.0",
-        "typedoc": "^0.25.0",
+        "typedoc": "^0.25",
         "typescript": "^5.2.2",
         "webpack": "5.88.2",
         "webpack-cli": "5.1.4",
-        "webpack-dev-server": "4.7.4",
-        "webpack-livereload-plugin": "^3.0.1",
-        "webpack-node-externals": "^3.0.0"
+        "webpack-dev-server": "4.15.1",
+        "webpack-livereload-plugin": "3.0.2",
+        "webpack-node-externals": "3.0.0"
     }
 }
