--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
         "url": "https://github.com/MikeMitterer/typescript-training"
     },
     "dependencies": {
-        "@mmit/logging": "0.1.12",
-        "date-fns": "^2.30.0",
+        "@mmit/logging": "0.1.15",
+        "date-fns": "2.23.0",
         "path": "^0.12.7"
     },
     "devDependencies": {
@@ -69,18 +69,18 @@
         "@babel/preset-env": "^7.22.10",
         "@babel/preset-typescript": "^7.22.11",
         "@babel/runtime": "^7.22.11",
-        "@mmit/muni": "^0.0.5",
+        "@mmit/muni": "0.0.7",
         "@mmit/styles": "^0.1.33",
         "@types/caniuse-lite": "^1",
         "@types/chai": "^4.3.5",
         "@types/core-js": "^2.5.4",
-        "@types/eslint": "^8",
+        "@types/eslint": "8.44.3",
         "@types/jest": "29.5.4",
         "@types/node": "^20.5.7",
         "@types/shelljs": "^0.8.9",
         "@types/ws": "^7.4.7",
-        "@typescript-eslint/eslint-plugin": "^6.6.0",
-        "@typescript-eslint/parser": "^6.6.0",
+        "@typescript-eslint/eslint-plugin": "6.7.4",
+        "@typescript-eslint/parser": "6.7.4",
         "assert": "^2.0.0",
         "autoprefixer": "^10.4.15",
         "babel-jest": "29.7.0",
@@ -98,7 +98,7 @@
         "crypto-browserify": "^3.12.0",
         "css-loader": "^6.2.0",
         "ejs-compiled-loader": "^3.1.0",
-        "eslint": "^8.48.0",
+        "eslint": "8.50.0",
         "file-loader": "^6.2.0",
         "html-loader": "^2.1.2",
         "html-webpack-plugin": "^5.3.2",
