--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
         "build:node:prod": "NODE_ENV=production webpack --config webpack.node.cjs --mode production",
         "build:web": "rm -rf dist && NODE_ENV=development webpack --config webpack.web.cjs --mode development",
         "build:web:prod": "rm -rf dist && NODE_ENV=production webpack --config webpack.web.cjs --mode production",
-        "deploy": "yarn version --new-version patch && yarn publish --non-interactive",
+        "deploy": "test $(yarn --version | awk -F. '{ print $1 }') -eq 4 && yarn run deploy:y4 || yarn run deploy:y2",
+        "deploy:y2": "yarn version --new-version patch && yarn publish --non-interactive",
+        "deploy:y4": "yarn version patch && yarn npm publish --access restricted",
         "doc": "typedoc --out doc --tsconfig tsconfig.lib.json src/main/",
         "prettier": "onchange './src/**/*.ts'  -- prettier --write {{changed}}",
-        "export:scripts": "jq -r '.scripts' package.json > \"${DEV_LOCAL}/Templates/Production/TypeScript/packages/scripts.json\""
+        "export": "yarn export:scripts",
+        "export:scripts": "jq -r '.scripts' package.json > \"${DEV_LOCAL}/Templates/Production/TypeScript/package/scripts-wp_env.json\""
     },
     "files": [
         "lib",
